--- a/tags.html
+++ b/tags.html
@@ -103,9 +103,11 @@
           <li><a href="https://alexioannides.github.io/tag/data-stores.html">data-stores</a> (1)</li>
           <li><a href="https://alexioannides.github.io/tag/high-performance-computing.html">high-performance-computing</a> (1)</li>
           <li><a href="https://alexioannides.github.io/tag/machine-learning.html">machine-learning</a> (2)</li>
-          <li><a href="https://alexioannides.github.io/tag/probabilistic-programming.html">probabilistic-programming</a> (1)</li>
-          <li><a href="https://alexioannides.github.io/tag/pymc3.html">pymc3</a> (1)</li>
-          <li><a href="https://alexioannides.github.io/tag/python.html">python</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/probabilistic-programming.html">probabilistic-programming</a> (2)</li>
+          <li><a href="https://alexioannides.github.io/tag/pymc3.html">pymc3</a> (2)</li>
+          <li><a href="https://alexioannides.github.io/tag/python.html">python</a> (2)</li>
+          <li><a href="https://alexioannides.github.io/tag/quant-finance.html">quant-finance</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/stochastic-processes.html">stochastic-processes</a> (1)</li>
     </ul>
   </div>
 </article>
